=================================

- Improving the logical port example with a stateless tunnel application.

- Renaming OFSwitch13Device::GetNumberFlowEntries () to GetNFlowEntries ().

- Including the meter ID parameter on OFSwitch13Device::MeterDrop trace source.

- Adjust the size of queue interface to avoid dropping packets when we still
  have space on internal queues.

- This version is compatible with ofsoftswitch13 library release v3.1.x and
  ns-3 version 3.26 (including patches). No backward compatibility with older
  ns-3 versions.


Release 3.0.0 (February 10, 2017)
=================================

- Starting using the Semantic Versioning (http://semver.org) on this project.
  So, BE AWARE THAT this release brings incompatible API changes in respect to
  prior OFSwitch13 versions.

- The OFSwitch13Queue was updated to match the changes introduced in the Queue
  API by ns-3.26. No more backward compatibility is available for ns-3.25 or
  prior versions.

- Including support for multiple controllers on the same OpenFlow network
  domain.

- Including support to build switch ports over VirtualNetDevices to work as
  logical ports.

- Renaming examples files to ofswitch13-*.cc and including the new
  ofswitch13-logical-port example.

- Removing the need of registering the switch at the controller before the
  connection start.

- Removing the controller address attribute from the OpenFlow device. It now
  must be indicated by the helper as a parameter to the 
  StartControllerConnection () device method.

- Creating the OFSwitch13StatsCalculator for switch performance monitoring.

- Implementing a simplified OpenFlow version-negotiation in OpenFlow device.

- Create the SocketReader class to read OpenFlow messages from TCP sockets in
  safe and independently way.

- Creating the RemoteController and RemoteSwitch classes, which can be used to
  independently store information of several remote connections, allowing the