@@ -16,6 +16,9 @@ Release 3.1.0 (XXXXXXXXXXXXXXXXX)
 - Adjust the size of queue interface to avoid dropping packets when we still
   have space on internal queues.
 
+- Improving the way the switch and controller deals with TCP sockets on
+  OpenFlow channel.
+
 - This version is compatible with ofsoftswitch13 library release v3.1.x and
   ns-3 version 3.26 (including patches). No backward compatibility with older
   ns-3 versions.
